# veris

./: .gitignore  AGENTS.md  ARCH.md  README.md  cli.py  main.py  pyproject.toml  requirements.txt  rxconfig.py  skills-lock.json
tests/: test_engine.py
veris/: veris.py
veris/api/: __init__.py  routes.py
veris/engine/: __init__.py  constants.py  dqs.py  generator.py  rules.py  schema.py  service.py
web/: app.py
