[project]
name = "veris"
version = "0.1.0"
description = ""
authors = [
    { name = "Daniel Onuchukwu", email = "114066984+0xfelaback@users.noreply.github.com" },
]
requires-python = ">=3.10,<4.0"
dependencies = ["reflex (==0.9.6.post2)", "fastapi (>=0.115)", "pandas (>=2.2)", "numpy (>=2.1)", "rich (>=13)", "requests (>=2.32)", "streamlit (>=1.40)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.3)"
]
